fix: Deal with Header padding
Since Header as several "toolbars", we need to add margin to the
content to lower it so that it is not hidden by the header

--- a/src/ducks/categories/CategoriesChart.styl
+++ b/src/ducks/categories/CategoriesChart.styl
@@ -17,7 +17,7 @@
 
     +small-screen()
         margin-right auto
-        margin-top 1.5rem
+        margin-top 4.5rem
 
     &.NoAccount
         background url('./pie-demo.svg') white
