--- a/src/ducks/recurrence/styles.styl
+++ b/src/ducks/recurrence/styles.styl
@@ -24,3 +24,5 @@
 .BarButtonRight
     margin-right -1rem
 
+.RecurrencesMobileContent
+    margin-top 3rem
